@@ -4,7 +4,8 @@ Changelog
 0.6 (unreleased)
 ----------------
 
-- Nothing changed yet.
+- Do not display state column in folders where all contents have no workflow.
+  [thomasdesvenain]
 
 
 0.5 (2012-08-29)
